--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<script src="https://cdn.jsdelivr.net/npm/gsap@3.0.4/dist/gsap.min.js"></script>
 		<script src="js/frameworks/pixi.min.js"></script>
 		
+		<!-- Vars -->
+		<script src="js/game/hoisting.js"></script>
+
 		<!-- Game -->
 		<script src="js/main.js"></script>
 
