--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="game_container">
 				<div class="game_main">
 					<div class="game_menu">
-						<div class="game_score">Score: 2000</div>
+						<div class="game_score">Round: 1</div>
 						<div class="game_control">E</div>
 						<div class="clear"></div>
 					</div>
@@ -61,6 +61,12 @@
 					Programming Assignment & Master Practical Part - MA1 20222
 				</div>
 			</footer>
+		</div>
+
+		<div id="GUI">
+			<div id="player_hunger">10</div>
+			<div id="player_thirst">10</div>
+			<div id="player_energy">10</div>
 		</div>
 
 		<script>
