--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</header>
 
 			<div class="game_container">
-				<div class="game_main">
+				<div class="game_main hiddenelement">
 					<div class="game_menu">
 						<div class="game_score">Round: 1</div>
 						<div class="game_control">E</div>
@@ -63,7 +63,18 @@
 						<div>Loading...</div>
 					</div>
 				</div>
+
+				<div class="network">
+					<div class="network_title">.:: Network Menu ::.</div>
+					Rooms:
+					<div class="network_rooms">
+						-
+					</div>
+					<div class="network_create">Create Room</div>
+				</div>
 			</div>
+
+
 
 			<footer class="footer">
 				<div class="content">
