Show joined users

--- a/index.html
+++ b/index.html
@@ -49,9 +49,15 @@
 						<div class="game_score">Round: 1</div>
 						<div class="game_control">E</div>
 						<br>
-						<div class="user-list" id="user-list">
-							<div>Players: </div>
+						<div class="room-infos">
+							<div class="user-list" id="user-list">
+								<div>Players: </div>
+							</div>
+							<div class="room-key" id="display-room-key">
+								<div>Room key: </div>
+							</div>
 						</div>
+
 						<div class="item-wrapper">
 							<div id="Items" class="items">
 								<div id="items_list">
