"waiting for turn" modal when it's not player's turn

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 			</header>
 
 			<div class="game_container">
+				<div class="turn-modal hiddenelement" id="turn-modal">
+					Waiting for turn...
+				</div>
 				<div class="game_main hiddenelement" id="main-game">
 					<div class="game_menu">
 						<div class="game_score">Round: 1</div>
@@ -93,8 +96,6 @@
 					</div>
 				</div>
 			</div>
-
-
 
 			<footer class="footer">
 				<div class="content">
